# dbus__dbus-mono

./: Makefile.am  autogen.sh  configure.in
mono/: AssemblyInfo.cs.in  dbus-sharp.dll.config.in
